--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   cloud_firestore: ^4.8.1
-  image_picker: ^0.8.4+11
+  image_picker: 0.8.4+11
   google_sign_in: ^5.2.4
   firebase_storage: ^11.2.3
   firebase_auth: ^4.6.3
